--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-lazy-load": "^4.0.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.20.1",
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0"
