--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.33",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "gsap": "^3.12.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -21,6 +23,7 @@
     "react-lazy-load": "^4.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.20.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0"
   },
